<resources>
    <string name="app_name_release">Dual Boot Patcher</string>
    <string name="app_name_debug">Dual Boot Patcher (Debug)</string>
    <string name="app_name_snapshot">Dual Boot Patcher (Snapshot)</string>
    <string name="wait_until_finished">Please wait until all operations are finished.</string>
    <string name="version">Version %s</string>
    <string name="url_source_code" translatable="false">https://github.com/chenxiaolong/DualBootPatcher/tree/%s</string>
    <string name="link_source_code">Source Code</string>
    <string name="url_xda_thread" translatable="false">http://forum.xda-developers.com/showthread.php?t=2447534</string>
    <string name="link_xda_thread">XDA Thread</string>
    <string name="url_licenses" translatable="false">https://github.com/chenxiaolong/DualBootPatcher/tree/%s/licenses</string>
    <string name="link_licenses">Licenses</string>
    <string name="credits">Special thanks to everyone who helped make this patcher possible!</string>
    <string name="mbtool_connect_fail_title">Could not connect to mbtool</string>
    <string name="mbtool_connect_fail_message">The application was unable to connect to
        mbtool. This could happen if root access was denied or if the ramdisk is not up to
        date.\n\nTap to try again.</string>
    <string name="title_roms">ROMs</string>
    <string name="title_patch_zip">Patch Zip File</string>
    <string name="title_free_space">Free Space</string>
    <string name="title_rom_settings">Settings</string>
    <string name="title_app_sharing">App Sharing</string>
    <string name="title_reboot">Reboot</string>
    <string name="title_about">About</string>
    <string name="title_exit">Exit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="multislot">Multi Slot %s</string>
    <string name="dataslot">%s (Data slot)</string>
    <string name="extsdslot">%s (Extsd slot)</string>
    <string name="couldnt_determine_version">Couldn\'t determine ROM version</string>
    <string name="switching_rom">Switching ROM</string>
    <string name="setting_kernel">Setting kernel</string>
    <string name="choose_rom_success">Successfully switched ROM</string>
    <string name="choose_rom_failure">Failed to switch ROM</string>
    <string name="choose_rom_checksums_invalid">Image checksums do not match</string>
    <string name="choose_rom_checksums_missing">Image checksums are missing</string>
    <string name="set_kernel_success">Successfully set the kernel</string>
    <string name="set_kernel_failure">Failed to set kernel</string>
    <string name="confirm_automated_switch_rom">Another application is trying to switch to %s.
            Continue?</string>
    <string name="unknown_boot_partition">Could not determine the boot partition because this
        device\'s codename \'%s\' is not recognized.</string>
    <string name="checksums_invalid">The SHA512 checksums for this ROM\'s boot.img or other *.img
        files in /sdcard/MultiBoot/%s/ do not match the expected checksums. A third party app may
        have maliciously changed these images. Proceed with switching the ROM?</string>
    <string name="checksums_missing">The SHA512 checksums for this ROM\'s boot.img or other *.img
        files in /sdcard/MultiBoot/%s/ are missing. This is likely caused by upgrading from an older
        version of this app. Proceed with switching the ROM?</string>
    <string name="rom_card_unknown_version">Unknown version</string>
    <string name="rom_card_unknown_build">Unknown build</string>
    <string name="rom_menu_update_ramdisk">Update ramdisk</string>
    <string name="rom_menu_set_kernel">Set kernel</string>
    <string name="rom_menu_backup_rom">Backup ROM</string>
    <string name="rom_menu_add_to_home_screen">Add to home screen</string>
    <string name="rom_menu_edit_name">Edit name</string>
    <string name="rom_menu_change_image">Change image</string>
    <string name="rom_menu_reset_image">Reset image</string>
    <string name="rom_menu_wipe_rom">Wipe ROM</string>
    <string name="successfully_created_launcher">Successfully added %s to the home screen.</string>
    <string name="auto_reboot_after_switching">Do you want the device to automatically reboot after
        switching the ROM?</string>
    <string name="wipe_target_system">System</string>
    <string name="wipe_target_cache">Cache</string>
    <string name="wipe_target_data">Data</string>
    <string name="wipe_target_dalvik_cache">Dalvik cache</string>
    <string name="wipe_target_multiboot_files">MultiBoot files</string>
    <string name="wipe_rom_dialog_title">Wipe targets</string>
    <string name="wiping_targets">Wiping targets</string>
    <string name="wipe_rom_successfully_wiped">Successfully wiped: %s</string>
    <string name="wipe_rom_failed_to_wipe">Failed to wipe: %s</string>
    <string name="wipe_rom_initiate_fail">Failed to initiate ROM wiping process</string>
    <string name="wipe_rom_none_selected">No wipes were performed because no targets were
        specified.</string>
    <string name="wipe_rom_no_wipe_current_rom">The currently running ROM cannot be wiped.</string>
    <string name="switcher_service_background_service">Background service</string>
    <string name="switcher_storage_permission_required">The ROM thumbnails and names cannot be
        loaded because the storage permissions were denied.</string>
    <string name="switcher_rom_image">ROM logo</string>
    <string name="switcher_ask_set_kernel_title">Set kernel?</string>
    <string name="switcher_ask_set_kernel_desc">The currently running kernel will be saved
        as the kernel for %s.</string>
    <string name="rename_rom_title">Rename %s</string>
    <string name="rename_rom_desc">Enter a new name for %s. Leave blank to use the
        default name.</string>
    <string name="kernel_not_set_desc">The kernel has not yet been set for the current ROM.
        Would you like to set the kernel now?</string>
    <string name="kernel_different_from_saved_desc">The saved kernel is different from the
        currently running kernel. Would you like to set the kernel now?</string>
    <string name="set_kernel_now">Set now</string>
    <string name="set_kernel_later">Set later</string>
    <string name="set_kernel_mismatched_rom">The currently selected ROM is %1$s, but you are trying
        to set the kernel for %2$s. Please confirm that this is what you want.</string>
    <string name="in_app_flashing_title_backup_rom">Backup ROM</string>
    <string name="in_app_flashing_title_restore_rom">Restore ROM</string>
    <string name="in_app_flashing_title_flash_file">Flash file</string>
    <string name="in_app_flashing_title_flash_files">Flash files</string>
    <string name="in_app_flashing_title">In-app flashing</string>
    <string name="in_app_flashing_fab_add_patched_file">Add patched file</string>
    <string name="in_app_flashing_fab_add_backup">Add backup</string>
    <string name="in_app_flashing_action_flash_file">Flash file</string>
    <string name="in_app_flashing_action_restore_backup">Restore backup</string>
    <string name="in_app_flashing_filename">Filename: %s</string>
    <string name="in_app_flashing_backup_name">Backup name: %s</string>
    <string name="in_app_flashing_restore_targets">Targets: %s</string>
    <string name="in_app_flashing_location">ROM ID: %s</string>
    <string name="in_app_flashing_dialog_installation_location">Installation location:</string>
    <string name="in_app_flashing_dialog_verifying_zip">Verifying zip</string>
    <string name="in_app_flashing_error_zip_not_found">The selected zip file was not found.</string>
    <string name="in_app_flashing_error_zip_read_fail">Could not read the selected zip file.</string>
    <string name="in_app_flashing_error_not_multiboot">The zip file doesn\'t appear to be patched
        for multiboot. Please patch the file before flashing it.</string>
    <string name="in_app_flashing_error_version_too_old">The zip file needs to be patched with %s or
        newer in order to use in-app flashing.</string>
    <string name="in_app_flashing_error_no_overwrite_rom">To prevent the current system from
        crashing or rebooting, flashing on top of the current ROM is not allowed.</string>
    <string name="in_app_flashing_change_install_location_desc">The zip was originally patched for
        installation to %s. Would you like to change the installation location?</string>
    <string name="in_app_flashing_keep_current_location">Keep location</string>
    <string name="in_app_flashing_change_install_location">Change location</string>
    <string name="in_app_flashing_dialog_first_use">The in-app flasher can flash both patched files
        and DualBootPatcher backups. Just tap the plus button to start flashing.\n\nThe pending
        actions can be dragged or swiped away to change the flash order or remove them from the
        queue.\n\nNOTE: This feature is still experimental. Please backup before continuing!</string>
    <string name="in_app_flashing_select_backup_dialog_desc">Choose a backup from the list to
        restore.</string>
    <string name="in_app_flashing_no_backups_available">There are no backups available to
        restore.</string>
    <string name="rom_details_info_slot">Slot</string>
    <string name="rom_details_info_version">Version</string>
    <string name="rom_details_info_build">Build</string>
    <string name="rom_details_info_mbtool_status">mbtool status</string>
    <string name="rom_details_info_apps_counts">Apps</string>
    <string name="rom_details_info_apps_counts_value">%1$s system apps, %2$s updated apps,
        %3$s user apps</string>
    <string name="rom_details_info_system_path">System path</string>
    <string name="rom_details_info_cache_path">Cache path</string>
    <string name="rom_details_info_data_path">Data path</string>
    <string name="rom_details_info_system_size">System size</string>
    <string name="rom_details_info_cache_size">Cache size</string>
    <string name="rom_details_info_data_size">Data size</string>
    <string name="rom_details_info_calculating">Calculating…</string>
    <string name="br_backup_title">Backup ROM</string>
    <string name="br_restore_title">Restore ROM</string>
    <string name="br_backup_targets_dialog_desc">Select targets that should be backed up.</string>
    <string name="br_restore_targets_dialog_desc">Select targets that should be restored.</string>
    <string name="br_target_system">System</string>
    <string name="br_target_cache">Cache</string>
    <string name="br_target_data">Data</string>
    <string name="br_target_boot">Boot image</string>
    <string name="br_target_config">MultiBoot configs</string>
    <string name="br_no_target_selected">No backup/restore targets selected.</string>
    <string name="br_name_dialog_desc">Enter a name for the backup. It cannot contain the forward
        slash (\"/\") or be \".\" or \"..\".</string>
    <string name="br_name_dialog_hint">Enter backup name…</string>
    <string name="patcher_background_message">Tap the FAB to add files to patch.</string>
    <string name="patcher_add_flashable_zip">Add flashable zip</string>
    <string name="patcher_add_odin_image">Add Odin image</string>
    <string name="update_ramdisk_title">Update ramdisk</string>
    <string name="rom_settings_patcher_title">Patcher</string>
    <string name="rom_settings_show_exit_title">Show Exit button</string>
    <string name="rom_settings_show_reboot_title">Show Reboot button</string>
    <string name="rom_settings_initial_screen_title">Initial screen</string>
    <string name="rom_settings_initial_screen_desc">First screen to show when opening the
        app.</string>
</resources>