<?xml version="1.0" encoding="utf-8"?>

<!--
   * Copyright (C) 2014  Andrew Gunnerson <andrewgunnerson@gmail.com>
   *
   * This program is free software: you can redistribute it and/or modify
   * it under the terms of the GNU General Public License as published by
   * the Free Software Foundation, either version 3 of the License, or
   * (at your option) any later version.
   *
   * This program is distributed in the hope that it will be useful,
   * but WITHOUT ANY WARRANTY; without even the implied warranty of
   * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   * GNU General Public License for more details.
   *
   * You should have received a copy of the GNU General Public License
   * along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/rom_settings_booting_title">
        <Preference
            android:key="update_ramdisk"
            android:persistent="false"
            android:title="@string/update_ramdisk_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/rom_settings_patcher_title">
        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:entries="@array/initial_screen_values"
            android:entryValues="@array/initial_screen_entry_values"
            android:key="initial_screen"
            android:persistent="true"
            android:summary="@string/rom_settings_initial_screen_desc"
            android:title="@string/rom_settings_initial_screen_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_reboot"
            android:title="@string/rom_settings_show_reboot_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_exit"
            android:title="@string/rom_settings_show_exit_title" />
    </PreferenceCategory>

</PreferenceScreen>